# epigentics-sim

./: .gitignore  Dockerfile  README.md
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  main.cpp
cmake/include/: Sample.h
cmake/src/: Sample.cpp
genomes/: AminoCodon.h  CodonTree.cpp  CodonTree.h  Makefile  a.out  aminoCodon.txt  introns  introns.cpp  proteinSynth.ipynb  test.cpp  textParser.cpp  tree.cpp
hello/: Arithmetic.cpp  Arithmetic.h  main.cpp
hello/main/: main.cpp
hypothetical/current/genomes/: RnaAndExcision.h  introns.ipynb  revision.cpp  tree.cpp
hypothetical/genomes/: AminoCodon.h  CodonTree.cpp  CodonTree.h  GenePosition.h  Introns.cpp  Makefile  aminoCodon.txt
hypothetical/heuristic/: heuristic.ipynb  intro.ipynb  notes.ipynb
hypothetical/idealProjOrg/: CMakeLists.txt  main.cpp
hypothetical/idealProjOrg/AminoCodon/: .AminoCodon.h.swp  AminoCodon.h
hypothetical/idealProjOrg/CodonTree/: CodonTree.cpp  CodonTree.h
hypothetical/idealProjOrg/genomes/: Introns.cpp  TextParser.cpp  test.cpp  tree.cpp
hypothetical/idealProjOrg/src/: CodonTree.cpp  Introns.cpp
hypothetical/idealProjOrg/test/: tree.cpp
ideal/current/: main.cpp
ideal/current/include/: Introns.h  Node.h
ideal/current/src/: Introns.cpp  Node.cpp
ideal/heuristic/notes/: heuristic.ipynb
retro-virus-sim/: DESCRIPTION.txt
